Version 1.3.0-pre2
------------------
New Applications
- Development : poEdit, Tortoise CVS, Tortoise SVN
- Productivity : VirtualDub
- Utilities : TaskSwitchXP

Internal Improvements
- AppSnap is now localizable. A French translation has been added courtesy
  Gonzague Dambricourt.
- Zipped applications with no installer can now be deployed.
- AppSnap maintains a copy of the database in the cache directory since it is
  an essential part of the application repository.
- Added preinstall, postinstall, preuninstall and postuninstall directives to
  allow executing custom commands to assist the install/uninstall process.
- In db.ini, the following are now optional: instparam, chinstdir, uninstall
  and uninstparam.

Bug Fixes
- Fixed a bug where latest.ini creation was failing on a fresh install since
  the cache directory did not exist. (Reported by gabmatrix). Also added error 
  checking for all file writes.
- Fixed a bug where update DB on the GUI was not reloading correctly.
- Fixed font bug reported by gabmatrix (issue 25) where AppSnap was loading the
  wrong font for the application name if Office 2007 was installed.
- Fixed a drawing bug reported by gabmatrix (issue 22) where application details
  were disappearing on choosing a different category.
- Fixed a regex bug in uninstall where msiexec calls were getting garbled.
- Fixed a bug where writes to latest.ini were not being serialized.

Scrape Fixes
- Fixed DVD-Flick to install to defined directory.
- Fixed Songbird scrape and filename.
- Fixed K-Lite scrape.
- Fixed Blender3D version search to exclude release candidates.

Version 1.3.0-pre1
------------------
New Applications
- Development : Py2Exe, wxPython Documentation
- Fun and Games : Battle for Wesnoth, Tremulous
- Internet : Google Talk, Maxthon, Opera, Skype, X-Chat, Yahoo Messenger
- Libraries : K-Lite Mega Codec Pack, OpenSSL
- Productivity : DVD-Flick, ImgBurn, Inkscape
- Utilities : ImageMagick, Launchy, RocketDock, Synergy

GUI Enhancements